--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            Ran Azouri
 tagline:          ''
-# description:      'A bright mathematician focusing on shapes and their hidden characteristics. Travels around a geometrically defined world'
+ description:     Institut fur Mathematik, Universität Zürich
 description:      ''
 url:              https://www.ranazouri.com
 baseurl:          /
