--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl:          /
 
 author:
   name:           'Ran Azouri'
-  url:            https://twitter.com/ran
+  url:            https://www.ranazouri.com
 
 paginate:         5
 
