--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 # relative_permalinks: true
 
 # Setup
-title:            Ran Azouri
+title:            Ran AYouri
 tagline:          ''
  description:     Institut fur Mathematik, Universität Zürich
 description:      ''
