--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ url:              https://www.ranazouri.com
 baseurl:          /
 
 author:
-  name:           'Ran Azouri'
+  name:           'Ran Ayouri'
   url:            https://www.ranazouri.com
 
 paginate:         5
