--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            Ran AYouri
 tagline:          ''
- description:     'Institut fur Mathematik, Universität Zürich'
+# description:     'Institut fur Mathematik, Universität Zürich'
 description:      ''
 url:              https://www.ranazouri.com
 baseurl:          /
