--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 
 # Setup
 title:            Ran Azouri
-tagline:          ''
+tagline:          'bbb'
 description:     'Institut fur Mathematik, Universitt Zrich'
 description:      'A'
 url:              https://www.ranazouri.com
