--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            Ran Azouri
 tagline:          'bbb'
-description:     'Institut fur Mathematik, Universitt Zrich'
+description:     'Institut f\"ur Mathematik, Universitt Zrich'
 # description:      'A'
 url:              https://www.ranazouri.com
 baseurl:          /
