--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            Ran Azouri
 tagline:          'bbb'
-description:     'Institut für Mathematik, Universitt Zrich'
+description:     'Institut für Mathematik, Universität Zürich'
 # description:      'A'
 url:              https://www.ranazouri.com
 baseurl:          /
