--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 
 # Setup
 title:            Ran Azouri
-tagline:          'bbb'
+tagline:          'mathematician'
 description:     'Institut für Mathematik, Universität Zürich'
 # description:      'A'
 url:              https://www.ranazouri.com
