--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 # Setup
 title:            Ran Azouri
 tagline:          'mathematician'
-description:     'Institute of Mathematics, University of Zurich'
+description:     'Laboratoire LAGA, Université Srbonne Paris Nord'
 # description:      'A'
 url:              https://www.ranazouri.com
 baseurl:          /
