--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ permalink:        pretty
 # Setup
 title:            Ran Azouri
 tagline:          'mathematician'
-description:     'IMJ-PRG, Université Paris Cité'
-# description:      'A'
+description:     'IMJ-PRG,'
+description:      'Université Paris Cité'
 url:              https://www.ranazouri.com
 baseurl:          /
 
