--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,9 @@ permalink:        pretty
 # Setup
 title:            Ran Azouri
 tagline:          'mathematician'
-description:     'IMJ-PRG, <br/> Université Paris Cité'
+descriptimon:     'MOTIVES meeting SINGULARITIES <br/>
+IMJ-PRG, <br/>
+Université Paris Cité'
 url:              https://www.ranazouri.com
 baseurl:          /
 
